--- a/multidisplaycast/build.gradle
+++ b/multidisplaycast/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/java-websocket-1.3.1.jar')
     compile files('libs/javax.jmdns_3.4.1-patch2.jar')
+    compile files('libs/AmazonFling.jar')
+    compile files('libs/WhisperPlay.jar')
 
     compile 'com.android.support:appcompat-v7:+'
     compile 'com.android.support:support-v4:+'
