--- a/build.gradle
+++ b/build.gradle
@@ -8,17 +8,61 @@ buildscript {
         maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.android.tools.build:gradle:2.2.3'
         classpath 'io.fabric.tools:gradle:1.+'
+    }
+
+    ext {
+        googlePlayServicesVersion = '10.0.0'
+        firebaseVersion = '10.0.0'
+        supportLibVersion = '24.2.1'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    supportV4 = 'com.android.support:support-v4:' + supportLibVersion
+    appCompat = 'com.android.support:appcompat-v7:' + supportLibVersion
+    mediaRouter = 'com.android.support:mediarouter-v7:' + supportLibVersion
+    cardView = 'com.android.support:cardview-v7:' + supportLibVersion
+    preference = 'com.android.support:preference-v7:' + supportLibVersion
+    supportAnotations = 'com.android.support:support-annotations:' + supportLibVersion
+    supportDesign = 'com.android.support:design:' + supportLibVersion
+
+    firebaseAnalytics = 'com.google.firebase:firebase-core:' + firebaseVersion
+    firebaseRealtimeDatabase = 'com.google.firebase:firebase-database:' + firebaseVersion
+    firebaseStorage = 'com.google.firebase:firebase-storage:' + firebaseVersion
+    firebaseCrashReporting = 'com.google.firebase:firebase-crash:' + firebaseVersion
+    firebaseAuthentication = 'com.google.firebase:firebase-auth:' + firebaseVersion
+    firebaseNotifications = 'com.google.firebase:firebase-messaging:' + firebaseVersion
+    firebaseRemoteConfig = 'com.google.firebase:firebase-config:' + firebaseVersion
+    firebaseInvites = 'com.google.firebase:firebase-invites:' + firebaseVersion
+    firebaseDynamicLinks = 'com.google.firebase:firebase-invites:' + firebaseVersion
+    firebaseAdMob = 'com.google.firebase:firebase-ads:' + firebaseVersion
+    firebaseAppIndexing = 'com.google.android.gms:play-services-appindexing:' + firebaseVersion
+
+    playServicesGcm = 'com.google.android.gms:play-services-gcm:' + googlePlayServicesVersion
+    playServicesAnalytics = 'com.google.android.gms:play-services-analytics:' + googlePlayServicesVersion
+    playServicesBase = 'com.google.android.gms:play-services-base:' + googlePlayServicesVersion
+    playServicesAds = 'com.google.android.gms:play-services-ads:' + googlePlayServicesVersion
+    playServicesCast = 'com.google.android.gms:play-services-cast:' + googlePlayServicesVersion
+
+    alternateApache = 'cz.msebera.android:httpclient:4.4.1.2'
+    eventBus = 'de.greenrobot:eventbus:2.4.0'
+    glide = 'com.github.bumptech.glide:glide:3.6.0'
+    timePicker = 'com.wdullaer:materialdatetimepicker:2.3.0'
+    munixUtilis = 'com.github.munix:AndroidUtilities:1.6.0'
+    superToasts = 'com.github.johnpersano:supertoasts:1.3.4@aar'
+    gson = 'com.google.code.gson:gson:+'
+    okhttp = 'com.squareup.okhttp3:okhttp:3.3.1'
 }
