--- a/multidisplaycast/build.gradle
+++ b/multidisplaycast/build.gradle
@@ -41,13 +41,14 @@ dependencies {
     compile files('libs/AmazonFling.jar')
     compile files('libs/WhisperPlay.jar')
 
-    compile 'com.android.support:appcompat-v7:+'
-    compile 'com.android.support:support-v4:+'
-    compile 'com.android.support:appcompat-v7:+'
-    compile 'com.android.support:mediarouter-v7:+'
-    compile 'com.android.support:design:+'
-    compile 'com.google.android.gms:play-services-cast:+'
+    compile rootProject.ext.appCompat
+    compile rootProject.ext.supportV4
+    compile rootProject.ext.appCompat
+    compile rootProject.ext.mediaRouter
+    compile rootProject.ext.supportDesign
+    compile rootProject.ext.playServicesCast
 
-    compile 'com.github.bumptech.glide:glide:3.6.0'
-    compile 'com.google.code.gson:gson:+'
+    compile rootProject.ext.glide
+    compile rootProject.ext.gson
+    compile rootProject.ext.munixUtilis
 }
