--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.30-eap-45'
+    ext.kotlin_version = '1.3.20'
     repositories {
         jcenter()
         mavenCentral()
@@ -11,7 +11,7 @@ buildscript {
         maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0-alpha02'
+        classpath 'com.android.tools.build:gradle:3.5.0-alpha07'
         classpath 'io.fabric.tools:gradle:1.+'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
